--- a/build.gradle
+++ b/build.gradle
@@ -213,7 +213,7 @@ publishing {
     publications {
         maven(MavenPublication) {
             groupId = group
-            artifactId = 'census-fwmt-fulfillment-event-service'
+            artifactId = 'census-fwmt-job-service'
             version = version
 
             from components.java
