Updated queues to delete failed messages and updated application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,6 +53,7 @@ rabbitmq:
   prefetchCount: 500
   concurrentConsumers: 5
   exchange:
+    queue: "Fulfilment.listener"
     routingKey: "event.fulfilment.request"
     exchange: "events"
 
