--- a/build.gradle
+++ b/build.gradle
@@ -89,7 +89,7 @@ dependencyManagement {
 dependencies {
     // Custom Libraries
     compile 'uk.gov.ons.census.fwmt:census-fwmt-canonical:1.0.17-RELEASE'
-    compile 'uk.gov.ons.census.fwmt:census-fwmt-events:0.0.47-SNAPSHOT'
+u    compile 'uk.gov.ons.census.fwmt:census-fwmt-events:1.0.50-RELEASE'
     compile 'uk.gov.ons.census.fwmt:census-fwmt-common:1.2.14-RELEASE'
 
     // General Libraries
