--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,8 @@ dependencyManagement {
 
 dependencies {
     // Custom Libraries
-    compile 'uk.gov.ons.census.fwmt:census-fwmt-events:2.0.0-RELEASE'
+	// This events library is specifically for this release. Branch of this release for code changes
+	compile('uk.gov.ons.census.fwmt:census-fwmt-events:2.0.50-RELEASE') 
     compile 'uk.gov.ons.census.fwmt:census-fwmt-common:2.0.0-RELEASE'
 
     // General Libraries
